--- a/BorgataJavaFx/src/main/java/poker/app/view/PokerTable.fxml
+++ b/BorgataJavaFx/src/main/java/poker/app/view/PokerTable.fxml
@@ -98,7 +98,7 @@
             </AnchorPane>
          </left>
          <right>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="386.0" prefWidth="148.0" BorderPane.alignment="CENTER">
                <children>
                   <HBox layoutY="145.0" prefHeight="100.0" prefWidth="275.0">
                      <children>
@@ -126,7 +126,7 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox layoutX="151.0" layoutY="199.0" prefHeight="173.0" prefWidth="339.0">
+                  <HBox layoutX="151.0" layoutY="199.0" prefHeight="173.0" prefWidth="339.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="111.0" AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="199.0">
                      <children>
                         <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="173.0" prefWidth="338.0" style="-fx-background-color: green;">
                           <items>
